# Assembly_ESP_MicroProcessing

./: CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  asm_main.c  component.mk
main/asm/: asm.S
